--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
-        "tightenco/jigsaw": "^1.7"
+        "tightenco/jigsaw": "^1.7",
+        "samdark/sitemap": "^2.2.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\Listeners\\": "listeners/"
+        }
     }
 }
