--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@fontsource-variable/montserrat": "^5.0.4",
+        "@fontsource-variable/open-sans": "^5.0.4"
     }
 }
