Move helpers to dedicated class to make them available in components

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "autoload": {
         "psr-4": {
             "App\\Listeners\\": "listeners/",
+            "Helpers\\": "helpers/",
             "Components\\": "components/"
         }
     }
